# meloha

./: .gitignore  README.md  my_test.py  package.xml  setup.cfg  setup.py
config/: left_dh_param.yaml  right_dh_param.yaml  rs_cam.yaml  usb_cam_head.yaml  usb_cam_high.yaml  usb_cam_left_wrist.yaml  usb_cam_right_wrist.yaml
joint_data/: displacement.csv  path_L.csv  path_R.csv
launch/: camera.launch.py  dynamixel.launch.py  meloha_bringup.launch.py  meloha_rviz.launch.py  test.launch.py
meloha/: constants.py  manipulator.py  real_env.py  robot.py  robot_utils.py  sleep.py  utils.py  vive_tracker.py
rviz/: meloha.rviz
scripts/: auto_record.sh  dual_arm_teleop.py  dual_side_teleop.py  encode_hdf5.py  record_episodes.py  record_episodes_with_dummy.py  replay_episodes.py  test.py  visualize_episodes.py
test/: test_data_frequency.py
test/test_process/: data_process.py
tests/: test_manipulator.py
urdf/: simple_meloha.urdf.xml
