<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meloha</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stpark5013@gmail.com">park</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk_custom_interfaces</depend> <!-- Dynamixel SetPostiion, GetPostion 메세지를 활용하기 위해서-->
  <depend>dynamixel_sdk</depend>
  <depend>dynamixel_sdk_examples</depend>
  <depend>multi_dynamixel_interfaces</depend> <!-- Dynamixel custom message를 활용하기 위해서 -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
